# SummerPraktice

./: DetectColor.py  LICENSE  README.md  color.py
Detect_color/: color.py
gpio_output (копия)/client/src/: gpio.c
gpio_output/client/src/: gpio.c
linux_client/: client.cpp
mqtt_publisher/: CMakeLists.txt  README.md  SETUP.md
mqtt_publisher/custom_vfs/: CMakeLists.txt
mqtt_publisher/custom_vfs/src/: vfs.c
mqtt_publisher/einit/: CMakeLists.txt
mqtt_publisher/einit/src/: common.psl  init.yaml.in  security.arm.psl  security.x86.psl
mqtt_publisher/env/: CMakeLists.txt
mqtt_publisher/env/src/: env.c
mqtt_publisher/publisher/: CMakeLists.txt
mqtt_publisher/publisher/src/: main.cpp  publisher.cpp
mqtt_publisher/resources/edl/: Env.edl  VfsNet.edl  VfsRamFs.edl  VfsSdcardFs.edl
mqtt_publisher/resources/include/: config.h.in
net_server/: cross-build.sh  flflflfl  mount.sh
net_server/server/src/: server.cpp
separate_storage/einit/: CMakeLists.txt
separate_storage/einit/src/: external.psl
separate_storage/resources/files/: userlist.txt
separate_storage/user_manager/src/: main.cpp
